Fix spacing

--- a/src/components/home/home-core/HomeCore.scss
+++ b/src/components/home/home-core/HomeCore.scss
@@ -9,6 +9,11 @@
         font-size: 50px;
         line-height: 1.2;
         margin-top: 60px;
+        font-weight: 500;
+    }
+
+    .home-title {
+        margin-top: 100px;
     }
 
     .contact {
