--- a/src/components/home/workshop/Workshop.scss
+++ b/src/components/home/workshop/Workshop.scss
@@ -1,6 +1,8 @@
 .workshop-container {
     max-width: 1077px;
     margin: auto;
+    margin-top: 100px;
+
     .heading-text {
         font-size: 64px;
         line-height: 1.1;
